[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sourceacademy-sicp"
version = "0.1.0"
description = "The Source Academy Python standard library for CPython: run CS1101S / SICP (Python edition) programs under plain CPython."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Source Academy", email = "martin.henz@gmail.com" }]
keywords = ["sicp", "cs1101s", "source-academy", "education", "scheme"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
    "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://github.com/source-academy/py-slang"
"Source Academy" = "https://sourceacademy.org"
"Bug Tracker" = "https://github.com/source-academy/py-slang/issues"

[tool.setuptools]
packages = ["sicp"]
license-files = ["LICENSE"]
